Improved mobile styling for contact page, individual game page, and individual member page. Also potentially resolved the home page video overlap bug in chrome desktop.

--- a/styles/game-page.css
+++ b/styles/game-page.css
@@ -3,15 +3,17 @@
 /* Text */
 #game-main-content {
 	color: black;
-	margin-left: 6em;
-	margin-right: 6em;
+	/* margin-left: 3em; */
+	/* margin-right: 3em; */
+	margin-left: 5vw;
+	margin-right: 5vw;
 	margin-top: 1em;
 	margin-bottom: 3em;
 }
 
 #game-main-content h1 {
 	color: #BC192F;
-	margin-left: -0.3em;
+	margin-left: -2vw;
 	margin-bottom: 0.4em;
 }
 
@@ -73,9 +75,9 @@
 }
 
 /* About, Play, and Project Members */
-.col-4 {
-	padding-left: 0.8em;
-	padding-right: 0.8em;
+.game-content-section {
+	padding-left: 1em;
+	padding-right: 1em;
 }
 
 /* Screenshots */
